--- a/.env_temple
+++ b/.env_temple
@@ -1,6 +1,6 @@
 OPENAI_API_KEY="sk-xxxxxxxxxxxxxxxxxx"
 OPENAI_API_BASE="https://xxxxxxxx/v1"
-MYSQL_URL="mysql://username:password@localhost/nlp2sql"
+MYSQL_URL="mysql://username:password@localhost/db_gpt"
 
 
 
