--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-langchain==0.1.17
+langchain==0.2.0
+langchain-community==0.2.0
 pydantic==2.7.1
 openai==1.25.0
 python-dotenv==1.0.1
@@ -7,5 +8,6 @@ uvicorn==0.29.0
 mysqlclient==2.2.4
 pytz==2024.1
 langfuse==2.28.0
-langchain-openai==0.1.6
+langchain-openai==0.1.7
 gradio==4.29.0
+PyMySQL==1.1.1
