--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
