--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 OPENAI_API_KEY=""
 OPENAI_API_BASE=""
-MYSQL_URL=""
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=jiayuan
+MYSQL_DATABASE=db-gpt
 
 
 
