--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ OPENAI_API_BASE=""
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=jiayuan
-MYSQL_DATABASE=db-gpt
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=nlp2sql
 
 
 
