增加chat db相关解决 优化docker启动方式

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=""
-OPENAI_API_BASE=""
-MYSQL_URL=""
+OPENAI_API_KEY="sk-xewkdEbXctJhrFDcAXeVGFuYuI7BWi3t227VWoSjGANTbnVG"
+OPENAI_API_BASE="https://api.fe8.cn/v1"
+MYSQL_URL="mysql://root:ls1234qwer@localhost/nlp2sql"
 
