--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 OPENAI_API_KEY=""
 OPENAI_API_BASE=""
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=root
-MYSQL_DATABASE=nlp2sql
+MYSQL_HOST=""
+MYSQL_PORT=""
+MYSQL_USER=""
+MYSQL_PASSWORD=""
+MYSQL_DATABASE=""
 
 
 
