增加docker 部署 无需配置db_url 就可以与DB对话

--- a/.env_temple
+++ b/.env_temple
@@ -1,6 +1,10 @@
 OPENAI_API_KEY="sk-xxxxxxxxxxxxxxxxxx"
 OPENAI_API_BASE="https://xxxxxxxx/v1"
-MYSQL_URL="mysql://username:password@localhost/db_gpt"
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=db_gpt
 
 
 
