增加docker 部署 无需配置db_url 就可以与DB对话

--- a/.env_temple
+++ b/.env_temple
@@ -1,9 +1,9 @@
 OPENAI_API_KEY="sk-xxxxxxxxxxxxxxxxxx"
 OPENAI_API_BASE="https://xxxxxxxx/v1"
-MYSQL_HOST=localhost
+MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=root
+MYSQL_PASSWORD=ls1234qwer
 MYSQL_DATABASE=db_gpt
 
 
